--- a/styles/style.css
+++ b/styles/style.css
@@ -3,8 +3,8 @@ body{
         text-align: center;
         align-items: center;
         flex-direction: column;
-        background-color: rgb(194, 140, 245);   
-}
+        background-color: rgb(194, 140, 245);  
+     }
 
 h1{
     font-family: sans-serif ;
@@ -17,8 +17,8 @@ input{
     border-color: rgb(0, 0, 0);
     
 }
-form{
-    width: 80%;
+#form{
+    width: 100%;
     height: 100%;
     
 }
@@ -45,7 +45,7 @@ button:hover{
     font-family: sans-serif;
     text-align: center;
 }
-#selector{
+#seletor{
     box-sizing: border-box;
     width: 5%;
     height: 40px;
